include/libfreenect.h


typedef enum {
	FREENECT_RESOLUTION_LOW    = 0, 
	FREENECT_RESOLUTION_MEDIUM = 1, 
	FREENECT_RESOLUTION_HIGH   = 2, 
	FREENECT_RESOLUTION_DUMMY  = 2147483647, 
} freenect_resolution;
typedef enum {
	FREENECT_VIDEO_RGB             = 0, 
	FREENECT_VIDEO_BAYER           = 1, 
	FREENECT_VIDEO_IR_8BIT         = 2, 
	FREENECT_VIDEO_IR_10BIT        = 3, 
	FREENECT_VIDEO_IR_10BIT_PACKED = 4, 
	FREENECT_VIDEO_YUV_RGB         = 5, 
	FREENECT_VIDEO_YUV_RAW         = 6, 
	FREENECT_VIDEO_DUMMY           = 2147483647, 
} freenect_video_format;
typedef enum {
	FREENECT_DEPTH_11BIT        = 0, 
	FREENECT_DEPTH_10BIT        = 1, 
	FREENECT_DEPTH_11BIT_PACKED = 2, 
	FREENECT_DEPTH_10BIT_PACKED = 3, 
	FREENECT_DEPTH_REGISTERED   = 4, 
	FREENECT_DEPTH_MM           = 5, 
	FREENECT_DEPTH_DUMMY        = 2147483647, 
} freenect_depth_format;
typedef struct {
	uint32_t reserved;              
	freenect_resolution resolution; 
	union {
		int32_t dummy;
		freenect_video_format video_format;
		freenect_depth_format depth_format;
	};                              
	int32_t bytes;                  
	int16_t width;                  
	int16_t height;                 
	int8_t data_bits_per_pixel;     
	int8_t padding_bits_per_pixel;  
	int8_t framerate;               
	int8_t is_valid;                
} freenect_frame_mode;
typedef enum {
	LED_OFF              = 0, 
	LED_GREEN            = 1, 
	LED_RED              = 2, 
	LED_YELLOW           = 3, 
	LED_BLINK_GREEN      = 4, 
	LED_BLINK_RED_YELLOW = 6, 
} freenect_led_options;
typedef enum {
	TILT_STATUS_STOPPED = 0x00, 
	TILT_STATUS_LIMIT   = 0x01, 
	TILT_STATUS_MOVING  = 0x04, 
} freenect_tilt_status_code;
typedef struct {
	int16_t                   accelerometer_x; 
	int16_t                   accelerometer_y; 
	int16_t                   accelerometer_z; 
	int8_t                    tilt_angle;      
	freenect_tilt_status_code tilt_status;     
} freenect_raw_tilt_state;
typedef struct _freenect_context freenect_context; 
typedef struct _freenect_device freenect_device; 
  typedef void freenect_usb_context;
  typedef libusb_context freenect_usb_context; 
typedef enum {
	FREENECT_LOG_FATAL = 0,     
	FREENECT_LOG_ERROR,         
	FREENECT_LOG_WARNING,       
	FREENECT_LOG_NOTICE,        
	FREENECT_LOG_INFO,          
	FREENECT_LOG_DEBUG,         
	FREENECT_LOG_SPEW,          
	FREENECT_LOG_FLOOD,         
} freenect_loglevel;
FREENECTAPI int freenect_init(freenect_context **ctx, freenect_usb_context *usb_ctx);
FREENECTAPI int freenect_shutdown(freenect_context *ctx);
typedef void (*freenect_log_cb)(freenect_context *dev, freenect_loglevel level, const char *msg);
FREENECTAPI void freenect_set_log_level(freenect_context *ctx, freenect_loglevel level);
FREENECTAPI void freenect_set_log_callback(freenect_context *ctx, freenect_log_cb cb);
FREENECTAPI int freenect_process_events(freenect_context *ctx);
FREENECTAPI int freenect_num_devices(freenect_context *ctx);
FREENECTAPI int freenect_open_device(freenect_context *ctx, freenect_device **dev, int index);
FREENECTAPI int freenect_close_device(freenect_device *dev);
typedef void (*freenect_depth_cb)(freenect_device *dev, void *depth, uint32_t timestamp);
typedef void (*freenect_video_cb)(freenect_device *dev, void *video, uint32_t timestamp);
FREENECTAPI void freenect_set_depth_callback(freenect_device *dev, freenect_depth_cb cb);
FREENECTAPI void freenect_set_video_callback(freenect_device *dev, freenect_video_cb cb);
FREENECTAPI int freenect_set_depth_buffer(freenect_device *dev, void *buf);
FREENECTAPI int freenect_set_video_buffer(freenect_device *dev, void *buf);
FREENECTAPI int freenect_start_depth(freenect_device *dev);
FREENECTAPI int freenect_start_video(freenect_device *dev);
FREENECTAPI int freenect_stop_depth(freenect_device *dev);
FREENECTAPI int freenect_stop_video(freenect_device *dev);
FREENECTAPI int freenect_update_tilt_state(freenect_device *dev);
FREENECTAPI freenect_raw_tilt_state* freenect_get_tilt_state(freenect_device *dev);
FREENECTAPI double freenect_get_tilt_degs(freenect_raw_tilt_state *state);
FREENECTAPI int freenect_set_tilt_degs(freenect_device *dev, double angle);
FREENECTAPI freenect_tilt_status_code freenect_get_tilt_status(freenect_raw_tilt_state *state);
FREENECTAPI int freenect_set_led(freenect_device *dev, freenect_led_options option);
FREENECTAPI int freenect_get_video_mode_count();
FREENECTAPI freenect_frame_mode freenect_get_video_mode(int mode_num);
FREENECTAPI freenect_frame_mode freenect_get_current_video_mode(freenect_device *dev);
FREENECTAPI freenect_frame_mode freenect_find_video_mode(freenect_resolution res, freenect_video_format fmt);
FREENECTAPI int freenect_set_video_mode(freenect_device* dev, freenect_frame_mode mode);
FREENECTAPI int freenect_get_depth_mode_count();
FREENECTAPI freenect_frame_mode freenect_get_depth_mode(int mode_num);
FREENECTAPI freenect_frame_mode freenect_get_current_depth_mode(freenect_device *dev);
FREENECTAPI freenect_frame_mode freenect_find_depth_mode(freenect_resolution res, freenect_depth_format fmt);
FREENECTAPI int freenect_set_depth_mode(freenect_device* dev, const freenect_frame_mode mode);